--- a/public/index.html
+++ b/public/index.html
@@ -304,7 +304,7 @@
                 <!-- Save Front as Image Button -->
                 <div class="mt-4 text-center no-print">
                     <button
-                        onclick="saveTicketAsImage('ticket-front-${type}', 'CLSU_Maestro_${type.toUpperCase()}_Front.png')"
+                        onclick="saveTicketAsImage('ticket-front-${type}', 'CLSU_Maestro_${attendeeName.toUpperCase()}_Front.png')"
                         class="bg-blue-600 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full shadow-md transition duration-300 ease-in-out transform hover:scale-105"
                     >
                         Save as Image
